[gd_scene load_steps=4 format=3 uid="uid://d0owehd7i4i04"]

[ext_resource type="Script" path="res://SampleProject/Scripts/UI/YesNoDialog.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://c3c6osxmpvjj6" path="res://release/src/resources/themes/default button.tres" id="1_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.50980395)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10

[node name="YesNoDialog" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false
mouse_filter = 1
theme = ExtResource("1_theme")
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 369.0
offset_top = 135.0
offset_right = -317.24658
offset_bottom = -263.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="Window" type="PanelContainer" parent="Background"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Background/Window"]
layout_mode = 2

[node name="Title" type="Label" parent="Background/Window/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Confirmation"
horizontal_alignment = 1

[node name="Message" type="Label" parent="Background/Window/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure?"
max_lines_visible = 1

[node name="Buttons" type="HBoxContainer" parent="Background/Window/VBox"]
layout_mode = 2
alignment = 1

[node name="YesButton" type="Button" parent="Background/Window/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="NoButton" type="Button" parent="Background/Window/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No"
